# experiment-django-with-fastapi

./: README.md  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: continues-integration.yml
mysite/: asgi.py  settings.py
poll/: adapters.py  admin.py  models.py  routers.py  schemas.py
poll/migrations/: 0001_initial.py  0002_auto_20211001_0839.py  0003_alter_book_title.py
poll/tests/: test_api.py
