[tool.poetry]
name = "experiment-django-with-fastapi"
version = "0.1.0"
description = "Tryout django orm and fastapi for API"
authors = ["ming-tung <mingtung.hong@gmail.com>"]
readme = "README.md"
exclude = ["poll/tests/"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
fastapi = "^0.68.1"
uvicorn = {extras = ["standard"], version = "^0.15.0"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-django = "^4.4.0"
isort = "^5.9.3"
flake8 = "^3.9.2"
black = "^21.9b0"
requests = "^2.26.0"

[tool.black]
line-length = 79
skip-string-normalization = true
exclude = 'build/|dist/|\.eggs/|\.git/|\.pytest_cache/|\.tox/|\.?venv/|migrations/'

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["mytest/migrations/", ".venv/",]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
